<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin" >

     <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/backExpressage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:background="@null"
            android:text="返回"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="100sp"
            android:text="@string/weather_search"
            android:textColor="#faa"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:id="@+id/lineExpressage"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/relative1"
        android:layout_marginTop="5dip"
        android:background="@color/gray" />


    <LinearLayout
        android:id="@+id/liner2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineExpressage"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10sp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/companyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:hint="顺丰"
            android:textColor="#f8a"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/liner2"
        android:layout_marginLeft="35dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single_number"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/singleNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:text="205009676007"
            android:inputType="text"
            android:textColor="#f8a"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/searchExpressage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/liner3"
        android:layout_marginBottom="15sp"
        android:layout_marginLeft="30dp"
        android:background="@color/deepSkyBlue"
        android:text="@string/search" />

</RelativeLayout>