<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <android.support.v4.view.ViewPager
            android:id="@+id/vp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:layout_gravity="bottom"
            android:background="#20000000"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dip"
                android:text="这是标题"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:orientation="horizontal" >

                <View
                    android:id="@+id/dot1"
                    android:layout_width="5dip"
                    android:layout_height="5dip"
                    android:layout_marginLeft="3dip"
                    android:layout_marginRight="3dip"
                    android:background="@drawable/dot_focused" />

                <View
                    android:id="@+id/dot2"
                    android:layout_width="5dip"
                    android:layout_height="5dip"
                    android:layout_marginLeft="3dip"
                    android:layout_marginRight="3dip"
                    android:background="@drawable/dot_normal" />

                <View
                    android:id="@+id/dot3"
                    android:layout_width="5dip"
                    android:layout_height="5dip"
                    android:layout_marginLeft="3dip"
                    android:layout_marginRight="3dip"
                    android:background="@drawable/dot_normal" />

                <View
                    android:id="@+id/dot4"
                    android:layout_width="5dip"
                    android:layout_height="5dip"
                    android:layout_marginLeft="3dip"
                    android:layout_marginRight="3dip"
                    android:background="@drawable/dot_normal" />

                <View
                    android:id="@+id/dot5"
                    android:layout_width="5dip"
                    android:layout_height="5dip"
                    android:layout_marginLeft="3dip"
                    android:layout_marginRight="3dip"
                    android:background="@drawable/dot_normal" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/mainLiner1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/Orange"
            android:text="@string/weather"
            android:textSize="25sp" />

        <Button
            android:id="@+id/translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/hotPink"
            android:text="@string/translate"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainLiner2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainLiner1"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/isbn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/cornflowerBlue"
            android:text="@string/isbn_search"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainLiner3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainLiner2"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/film"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/lightCoral"
            android:text="@string/film_search"
            android:textSize="25sp" />
    </LinearLayout>

    <Button
        android:id="@+id/expressage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/mainLiner2"
        android:layout_below="@+id/mainLiner3"
        android:background="@color/DodgerBlue"
        android:text="@string/expressage_search"
        android:textSize="25sp" />

</RelativeLayout>